# realmate-challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
messaging/: enums.py  models.py  serializers.py  urls.py  views.py
messaging/enums/: __init__.py  conversation.py  message.py  webhook.py
messaging/migrations/: 0001_initial.py  0002_alter_conversationmodel_id_alter_messagemodel_id.py
messaging/models/: __init__.py  abstract.py  conversation.py  message.py
messaging/serializers/: __init__.py  conversation.py  message.py  webhook.py
messaging/templates/conversation/: list.html
messaging/views/: __init__.py  conversation.py  webhook.py
messaging/views/frontend/: __init__.py  conversation.py
realmate_challenge/: settings.py  urls.py
utils/: handlers.py  swagger.py
